Sat Aug 25 17:46:35 2001  Tom Gilbert  <tom@linuxbrit.co.uk>

	* Fixed --geometry mode. When you resized the window it would still
	center/size to the size you specified in --geometry. I think
	--geometry should just say "don't change the window size", but the
	user should still be able to :)
	* Added a new menu option for freezing/unfreezing the window size.

Sat Aug 25 02:49:54 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* okay. feh menus now support toggleable items.
	* I was gonna use ellipses for the toggle state, but I found that
	I had broken ellipses in imlib2 a while back (at least I think it
	was me). So it's rectangles. I fixed imlib2 now, but there won't
	be a release for a while.
	* A couple of options can now be configured through the menus,
	will add more in time.
	* some other stuff I forget, I'm tired :)

Fri Aug 24 08:44:46 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Even better, you can copy a pixmap between displays :) This is
	much faster than Xput/get. Cheers raster.

Thu Aug 23 19:04:57 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay. So you can't copy a pixmap between two displays using
	XCopyArea :) Fair enough, back to blechy XPut/XGetImage. It works
	now with or without E, and Eterm is happy. Managed to avoid
	leaking data into X through imlib2 or my own cached GCs, which is
	nice :)
	* Tested commandline too, works great with E or without. Finally.
	* Also fixed a bug with the non-E centering code, it would only
	have really worked for square images before ;-)

Wed Aug 22 22:44:13 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay, setting the pixmap and atoms works now, bar an imlib2 bug
	we need to fix. So right now, rather than dump core, I leak X
	connections whenever you set a BG. No big hit unless you do
	thousands, and it's only temporary until we fix imlib2.
	* This is mainly for raster to check out right now.

Wed Aug 22 17:01:08 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
