@@ -9,7 +9,7 @@ use Getopt::Long;
 my $feh   = "feh";
 
 # additional feh cmdline options
-my $PRE  = " -q -G -w -Twebcam -1 0 -0 1 ";
+my $PRE  = " -q -G -Twebcam -1 0 -0 1 ";
 my $POST = ""; 
 #############################################
 #############################################
