@@ -137,11 +137,15 @@ void feh_menu_show_at(feh_menu * m, int x, int y);
 void feh_menu_show_at_xy(feh_menu * m, winwidget winwin, int x, int y);
 void feh_menu_show_at_submenu(feh_menu * m, feh_menu * parent_m,
                               feh_menu_item * i);
-void feh_menu_hide(feh_menu * m);
+void feh_menu_hide(feh_menu * m, int func_free);
 void feh_menu_show(feh_menu * m);
 feh_menu_item *feh_menu_add_entry(feh_menu * m, char *text, Imlib_Image icon,
                                   char *submenu, menu_func func, void *data,
                                   void (*func_free) (void *data));
+feh_menu_item *
+feh_menu_add_toggle_entry(feh_menu * m, char *text, Imlib_Image icon,
+                          char *submenu, menu_func func, void *data,
+                          void (*func_free) (void *data), int setting);
 void feh_menu_entry_get_size(feh_menu * m, feh_menu_item * i, int *w, int *h);
 void feh_menu_calc_size(feh_menu * m);
 void feh_menu_draw_item(feh_menu * m, feh_menu_item * i, Imlib_Image im,
