@@ -1,3 +1,11 @@
+Sat Aug 25 18:36:30 2001  Tom Gilbert  <tom@linuxbrit.co.uk>
+
+	* No need for cam to use -w as it spawns multiple feh processes.
+	* Can use options menu to switch between fullscreen and window
+	modes.
+	* Some fullscreen code cleanups. Now a per-window option.
+	* Menu code cleanups.
+
 Sat Aug 25 17:46:35 2001  Tom Gilbert  <tom@linuxbrit.co.uk>
 
 	* Fixed --geometry mode. When you resized the window it would still
